--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -283,7 +283,7 @@
     <string name="location_settings_summary_location_off" msgid="4797932754681162262">"آف ہے"</string>
     <string name="location_settings_summary_location_on" msgid="4273299717586679786">"{count,plural, =1{آن ہے / # ایپ کو مقام تک رسائی حاصل ہے}other{آن ہے / # ایپس کو مقام تک رسائی حاصل ہے}}"</string>
     <string name="location_settings_loading_app_permission_stats" msgid="6054103701535557342">"لوڈ ہو رہی ہے…"</string>
-    <string name="location_settings_footer_general" msgid="1040507068701188821">"قریبی آلات کی اجازت والی ایپس منسلک آلات کی متعلقہ پوزیشن کا تعین کر سکتی ہیں۔"</string>
+    <string name="location_settings_footer_general" msgid="3447585552176173502">"قریبی آلات کی اجازت والی ایپس منسلک آلات کی متعلقہ پوزیشن کا تعین کر سکتی ہیں۔"</string>
     <string name="location_settings_footer_location_off" msgid="8568995909147566720">"ایپس اور سروسز کے لیے مقام تک رسائی آف ہے۔ آپ کے ایمرجنسی نمبر پر کال کرنے یا ٹیکسٹ پیغام بھیجنے پر بھی ایمرجنسی مدد فراہم کنندگان کو آپ کے آلے کا مقام بھیجا جا سکتا ہے۔"</string>
     <string name="location_settings_footer_learn_more_content_description" msgid="349380666660145540">"مقام کی ترتیبات کے بارے میں مزید جانیں"</string>
     <string name="location_settings_tooltip_text_for_chrome" msgid="5781821709250544575">"‏تبدیل کرنے کے لیے، ChromeOS کی ترتیبات &gt; رازداری اور سیکیورٹی &gt; رازداری سے متعلق کنٹرولز &gt; مقام تک رسائی پر جائیں"</string>
@@ -1918,6 +1918,8 @@
     <string name="slow_keys_summary" msgid="1784371292745423292">"‏کسی کلید کے دبانے پر اس کے فعال ہونے میں لگنے والے وقت کو ‎<xliff:g id="SLOW_KEYS_THRESHOLD">%1$d</xliff:g> ms‎ میں ایڈجسٹ کرتا ہے"</string>
     <string name="sticky_keys" msgid="7317317044898161747">"دبی رہنے والی کلیدیں"</string>
     <string name="sticky_keys_summary" msgid="1844953803625480623">"کلیدوں کو ایک ساتھ نیچے کی طرف پکڑے رکھنے کے بجائے، شارٹ کٹس کیلئے ایک وقت میں ایک کلید دبائیں"</string>
+    <string name="mouse_keys" msgid="6237254627808525540">"ماؤس کیز"</string>
+    <string name="mouse_keys_summary" msgid="2396247040177734245">"ماؤس کو کنٹرول کرنے کے لیے فزیکل کی بورڈ کا استعمال کریں۔"</string>
     <string name="keyboard_shortcuts_helper" msgid="2553221039203165344">"کی بورڈ شارٹ کٹس"</string>
     <string name="keyboard_shortcuts_helper_summary" msgid="5979507677602559203">"شارٹ کٹس کی فہرست دکھائیں"</string>
     <string name="language_and_input_for_work_category_title" msgid="2546950919124199743">"دفتری پروفائل کے کی بورڈز اور ٹولز"</string>
@@ -3652,9 +3654,11 @@
     <string name="notif_listener_not_migrated" msgid="6265206376374278226">"یہ ایپ بہتر کردہ ترتیبات کو سپورٹ نہیں کرتی ہے"</string>
     <string name="notif_listener_more_settings" msgid="1348409392307208921">"مزید ترتیبات"</string>
     <string name="notif_listener_more_settings_desc" msgid="7995492074281663658">"اس ایپ کے اندر مزید ترتیبات دستیاب ہیں"</string>
-    <string name="notification_polite_title" msgid="4737150709382859870">"اڈاپٹیو اطلاعات"</string>
-    <string name="notification_polite_main_control_title" msgid="7267191551379543859">"اڈاپٹیو اطلاعات استعمال کریں"</string>
-    <string name="notification_polite_description" msgid="7749280535620291610">"جب آپ کو کم وقت میں بہت ساری اطلاعات موصول ہوں گی تو آپ کا فون حجم کو کم کر دے گا اور دو منٹ تک اسکرین پر پاپ اپس کو کم کر دے گا۔ کالز، الارمز، اور ترجیحی گفتگوئیں اب بھی وائبریٹ ہوتی ہیں، آواز پیدا کرتی ہیں یا اسکرین پر ظاہر ہوتی ہیں اور جب آپ اسکرین کے اوپری حصے سے نیچے کی طرف کھینچتے ہیں تو تمام اطلاعات کو تلاش کرنا آسان ہوتا ہے۔"</string>
+    <string name="notification_polite_title" msgid="6121016426991791557">"نوٹیفکیشن کول ڈاؤن"</string>
+    <!-- no translation found for notification_polite_main_control_title (5812529809151927149) -->
+    <skip />
+    <!-- no translation found for notification_polite_description (5497748284893832854) -->
+    <skip />
     <string name="notification_polite_work" msgid="8823596456640216391">"دفتری پروفائلز پر لاگو کریں"</string>
     <string name="notification_polite_work_summary" msgid="5014189280132951378">"دفتری پروفائل ایپس پر لاگو کریں"</string>
     <string name="vr_listeners_title" msgid="4960357292472540964">"‏VR مددگار سروسز"</string>
@@ -3811,7 +3815,10 @@
     <string name="zen_mode_apps_priority_apps" msgid="7386196048313716076">"منتخب کردہ ایپس"</string>
     <string name="zen_mode_apps_none_apps" msgid="2493642312793604327">"کوئی نہیں"</string>
     <string name="zen_mode_apps_subtext" msgid="1764211974662012877">"{count,plural,offset:2 =0{کوئی ایپ رکاوٹ نہیں ڈال سکتی}=1{{app_1} رکاوٹ ڈال سکتی ہے}=2{{app_1} اور {app_2} رکاوٹ ڈال سکتی ہیں}=3{{app_1}، {app_2} اور{app_3} رکاوٹ ڈال سکتی ہیں}other{{app_1}، {app_2} اور # مزید رکاوٹ ڈال سکتی ہیں}}"</string>
+    <string name="zen_mode_apps_work_app" msgid="8528767938316361588">"<xliff:g id="APP_LABEL">%s</xliff:g> (دفتری)"</string>
     <string name="zen_mode_apps_calculating" msgid="5420121396943539286">"حساب لگایا جا رہا ہے…"</string>
+    <!-- no translation found for zen_mode_plus_n_items (6136713354369243421) -->
+    <skip />
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ایپس کو اوور رائیڈ کرنے کی اجازت دیں"</string>
     <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو مداخلت کر سکتی ہیں"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"مزید ایپس منتخب کریں"</string>
@@ -3829,6 +3836,8 @@
     <string name="zen_mode_sounds_none" msgid="6557474361948269420">"کوئی چیز رکاوٹ نہیں ڈال سکتی"</string>
     <string name="zen_mode_people_none" msgid="4613147461974255046">"کوئی بھی رکاوٹ نہیں ڈال سکتا"</string>
     <string name="zen_mode_people_some" msgid="9101872681298810281">"کچھ لوگ رکاوٹ ڈال سکتے ہیں"</string>
+    <!-- no translation found for zen_mode_people_repeat_callers (4499084111069828761) -->
+    <skip />
     <string name="zen_mode_people_all" msgid="311036110283015205">"سبھی لوگ رکاوٹ ڈال سکتے ہیں"</string>
     <string name="zen_mode_repeat_callers" msgid="2270356100287792138">"بار بار کال کرنے والے"</string>
     <string name="zen_mode_repeat_callers_title" msgid="8016699240338264781">"دوبارہ کال کرنے والوں کو اجازت دیں"</string>
